--- a/public/css/style.css
+++ b/public/css/style.css
@@ -939,6 +939,26 @@ body {
     margin-left: 8%;
 }
 
+.form_frost  .btnNewRegister {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.form_frost  .btnNewRegister button {
+    width: 250px;
+}
+
+.form_frost .btnLogin {
+    display:  flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.form_frost .btnLogin button {
+    width: 250px;
+}
+
 /* ---------------------------------------- dashboard.php Admin ---------------------------------------- */
 
 .home_content .dashboard {
@@ -1707,7 +1727,6 @@ footer .copyright {
     }
 }
 /* -------------------- Media Query 992px ---------- Surface Pro 7 -------------------- */
-
 @media screen and (max-width: 992px) {
     * {
         max-width: 992px;
@@ -1862,7 +1881,7 @@ footer .copyright {
         width: 90.5%;
         margin-left: 5px;
         margin-top: 0.5%;
-    }
+    } 
     .successBackground {
         background: url('../images/successBackground.jpeg');
         background-repeat: no-repeat;
@@ -1953,5 +1972,533 @@ footer .copyright {
         margin-top: 10%;
         margin-left: 5%;
         font-size: 15px;
+    }
+}
+/* -------------------- Media Query 820px ---------- Ipad Air -------------------- */
+@media screen and (max-width: 820px) {
+    * {
+        max-width: 820px;
+    }
+    .home_content .welcome {
+        background: url('../images/welcomeOnBoard.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100%;
+        height: 45vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding-top: 0px;
+        overflow: hidden;
+    }
+    .content .backgroundChefWord {
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 2% 5%;
+        background: black;
+        background-attachment: scroll;
+        background-size: 100%;
+        height: 65vh;
+    }
+    .home_content .listBackground {
+        background: url('../images/bureauCafe.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 103%;
+        height: 40vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-bottom: 0.5%;
+    }
+    .list_articles {
+        background: url('../images/textureBois.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        width: 99%;
+        margin-left: 5px;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+    .home_content .detailArticle {
+        background: #11101d;
+        color: burlywood;
+        margin-top: 0.5%;
+        width: 99%;
+        margin-left: 5px;
+    }
+    .home_content .dashboard {
+        background: url('../images/dashboard.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 105%;
+        height: 40vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .backgroundCommentsAdmin {
+        background: url('../images/moderation.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        min-height: 50vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .commentsAdmin .commentButtonModeration button {
+        width: 105px;
+    }
+    .backgroundNewArticle {
+        background: url('../images/globeDigital.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: cover;
+        min-height: 50vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .successBackground {
+        background: url('../images/successBackground.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 135%;
+        height: 45vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 125px;
+        overflow: hidden;
+    }
+    .successBackground h1 {
+        margin-left: 45%;
+        margin-top: 1%;
+    }
+    .successBackground .alert-success {
+        margin-left: 45%;
+        margin-right: 2%;
+        font-size: 35px;
+    }
+    .errorBackground {
+        background: url('../images/Danger-Wallpaper-Background.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 100%;
+        height: 35vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 125px;
+        overflow: hidden;
+    }
+    .errorBackground h1 {
+        margin-top: 0%;
+        margin-left: 20%;
+    }
+    .errorBackground .alert-danger {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .home_content .register {
+        background: url('../images/inscription.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        height: 55vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 100px;
+        overflow: hidden;
+    }
+    .home_content .login {
+        background: url('../images/inscription.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        height: 55vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 100px;
+        overflow: hidden;
+    }
+    .form_frost {
+        width: 600px;
+        height: 500px;
+        margin-left: 10%;
+    }
+    footer {
+        background: rgb(0, 25, 46);
+        color: burlywood;
+        margin-top: 0.5%;
+        width: 99%;
+        margin-left: 5px;
+    }
+}
+/* -------------------- Media Query 768px ---------- Ipad Mini -------------------- */
+@media screen and (max-width: 768px) {
+    * {
+        max-width: 768px;
+    }
+    .home_content .welcome {
+        background: url('../images/welcomeOnBoard.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100%;
+        height: 45vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding-top: 0px;
+        overflow: hidden;
+    }
+    .content .backgroundChefWord {
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 2% 5%;
+        background: black;
+        background-attachment: scroll;
+        background-size: 100%;
+        height: 80vh;
+    }
+    .home_content .listBackground {
+        background: url('../images/bureauCafe.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 103%;
+        height: 40vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-bottom: 0.5%;
+    }
+    .list_articles {
+        background: url('../images/textureBois.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        width: 99%;
+        margin-left: 5px;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+    .home_content .detailArticle {
+        background: #11101d;
+        color: burlywood;
+        margin-top: 0.5%;
+        width: 99%;
+        margin-left: 5px;
+    }
+    .home_content .dashboard {
+        background: url('../images/dashboard.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 105%;
+        height: 40vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .backgroundCommentsAdmin {
+        background: url('../images/moderation.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        min-height: 50vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .commentsAdmin .commentButtonModeration button {
+        width: 100px;
+    }
+    .backgroundNewArticle {
+        background: url('../images/globeDigital.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: cover;
+        min-height: 50vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .successBackground {
+        background: url('../images/successBackground.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 122%;
+        height: 45vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 125px;
+        overflow: hidden;
+    }
+    .successBackground h1 {
+        margin-left: 40%;
+        margin-top: 1%;
+    }
+    .successBackground .alert-success {
+        margin-left: 42%;
+        margin-right: 2%;
+        font-size: 30px;
+    }
+    .errorBackground {
+        background: url('../images/Danger-Wallpaper-Background.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 100%;
+        height: 37vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 125px;
+        overflow: hidden;
+    }
+    .errorBackground h1 {
+        margin-top: 0%;
+        margin-left: 20%;
+    }
+    .errorBackground .alert-danger {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .home_content .register {
+        background: url('../images/inscription.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 150%;
+        height: 55vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 30px;
+        overflow: hidden;
+    }
+    .home_content .login {
+        background: url('../images/inscription.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 150%;
+        height: 55vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 30px;
+        overflow: hidden;
+    }
+    .form_frost {
+        width: 500px;
+        height: 500px;
+        margin-left: 15%;
+    }
+    footer {
+        background: rgb(0, 25, 46);
+        color: burlywood;
+        margin-top: 0.5%;
+        width: 99%;
+        margin-left: 5px;
+    }
+    .form_contact {
+        margin-left: 5%;
+        width: 550px;
+        height: 350px;
+    }
+}
+/* -------------------- Media Query 540px ---------- Surface Duo -------------------- */
+@media screen and (max-width: 540px) {
+    * {
+        max-width: 540px;
+    }
+    .home_content .welcome {
+        background: url('../images/welcomeOnBoard.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100%;
+        height: 45vh;
+        width: 98%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding-top: 0px;
+        overflow: hidden;
+    }
+    .content .backgroundChefWord {
+        width: 98%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 2% 5%;
+        background: black;
+        background-attachment: scroll;
+        background-size: 100%;
+        height: 75vh;
+    }
+    .home_content .listBackground {
+        background: url('../images/bureauCafe.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100%;
+        height: 40vh;
+        width: 98%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        margin-bottom: 0.5%;
+    }
+    .listBackground h1 {
+        font-size: 30px;
+    }
+    .list_articles {
+        background: url('../images/textureBois.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        width: 98%;
+        margin-left: 5px;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+    .list_articles .card_article {
+        width: 350px;
+        height: 200px;
+        margin-left: 12%;
+        margin-bottom: 15%;
+    }
+    .list_articles .card_article:hover {
+        margin-left: 5%;
+        width: 400px;
+        height: 240px;
+    }
+    .home_content .detailArticle {
+        background: #11101d;
+        color: burlywood;
+        margin-top: 0.5%;
+        width: 99%;
+        margin-left: 5px;
+    }
+    .home_content .dashboard {
+        background: url('../images/dashboard.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 105%;
+        height: 40vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .backgroundCommentsAdmin {
+        background: url('../images/moderation.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        min-height: 50vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .commentsAdmin .commentButtonModeration button {
+        width: 100px;
+    }
+    .backgroundNewArticle {
+        background: url('../images/globeDigital.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: cover;
+        min-height: 50vh;
+        width: 99%;
+        margin-left: 5px;
+        margin-top: 0.5%;
+    }
+    .successBackground {
+        background: url('../images/successBackground.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 122%;
+        height: 45vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 125px;
+        overflow: hidden;
+    }
+    .successBackground h1 {
+        margin-left: 40%;
+        margin-top: 1%;
+    }
+    .successBackground .alert-success {
+        margin-left: 42%;
+        margin-right: 2%;
+        font-size: 30px;
+    }
+    .errorBackground {
+        background: url('../images/Danger-Wallpaper-Background.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 100%;
+        height: 37vh;
+        width: 99%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 125px;
+        overflow: hidden;
+    }
+    .errorBackground h1 {
+        margin-top: 0%;
+        margin-left: 20%;
+    }
+    .errorBackground .alert-danger {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .home_content .register {
+        background: #7A2001; 
+        height: 80vh;
+        width: 98%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 30px;
+        overflow: hidden;
+    }
+    .home_content .login { 
+        background: #7A2001; 
+        height: 80vh;
+        width: 98%;
+        margin-top: 0.5%;
+        margin-left: 5px;
+        padding-top: 30px;
+        overflow: hidden;
+    }
+    .form_frost {
+        width: 350px;
+        height: 500px;
+        margin-left: 10%;
+    }
+    .form_frost input {
+        width: 300px;
+    }
+    .form_frost .btnNewRegister button {
+        width: 100px;
+    }
+    footer {
+        background: rgb(0, 25, 46);
+        color: burlywood;
+        margin-top: 0.5%;
+        width: 99%;
+        margin-left: 5px;
+    }
+    .form_contact {
+        margin-left: 5%;
+        width: 550px;
+        height: 350px;
     }
 }
