--- a/public/css/style.css
+++ b/public/css/style.css
@@ -382,107 +382,6 @@ body {
     background-size: cover;
     height: 80%;
 }
-@media screen and (max-width: 1025px) { /* Nest Hub */
-    .content .backgroundChefWord {
-        width: 89%;
-        margin-top: 1%;
-        margin-left: 10px;
-        padding: 2% 5%;
-        background: black;
-        height: 80%;
-    }
-}
-@media screen and (max-width: 800px) {
-    .content .backgroundChefWord {
-        width: 88.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 80vh;
-    }
-}
-@media screen and (max-width: 667px) {
-    .content .backgroundChefWord {
-        width: 86.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 60vh;
-    }
-}
-@media screen and (max-width: 550px) {
-    .content .backgroundChefWord {
-        width: 86.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 65vh;
-    }
-}
-@media screen and (max-width: 450px) {
-    .content .backgroundChefWord {
-        width: 86.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 60vh;
-    }
-}
-@media screen and (max-width: 399px) {
-    .content .backgroundChefWord {
-        width: 86.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 70vh;
-    }
-}
-@media screen and (max-width: 379px) {
-    .content .backgroundChefWord {
-        width: 86.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 90vh;
-    }
-}
-@media screen and (max-width: 299px) {
-    .content .backgroundChefWord {
-        width: 84.5%;
-        margin-top: 1%;
-        margin-left: 5px;
-        margin-right: 5px;
-        padding: 2% 5%;
-        background: black;
-        background-attachment: scroll;
-        background-size: 50%;
-        height: 110vh;
-    }
-}
 
 .chefWord {
     margin-top: 11%;
@@ -2344,6 +2243,9 @@ footer .copyright {
         background-size: 100%;
         height: 75vh;
     }
+    .backgroundChefWord h3 {
+        font-size: 18px;
+    }
     .home_content .listBackground {
         background: url('../images/bureauCafe.jpeg');
         background-repeat: no-repeat;
@@ -2386,13 +2288,40 @@ footer .copyright {
         width: 99%;
         margin-left: 5px;
     }
+    .detailArticle .row button {
+        margin-left: 55%;
+    }
+    .commentsArticle {
+        width: 410px;
+        margin-left: 0%;
+    }
+    .commentsArticle h4 {
+        font-size: 35px;
+        margin-left: 0%;
+    }
+    .form_comment {
+        width: 410px;
+        margin-left: 0%;
+        margin-right: 2%;
+    }
+    .formModifyComment {
+        margin-right: 0%;
+        width: 350px;
+    }
+    .form_comment .formDeleteCom button {
+        width: 100px;
+        margin-left: 10%;
+    }
+    .formAddCom {
+        width: 350px;
+    }
     .home_content .dashboard {
         background: url('../images/dashboard.jpeg');
         background-repeat: no-repeat;
         background-attachment: scroll;
-        background-size: 105%;
-        height: 40vh;
-        width: 99%;
+        background-size: 200%;
+        height: 60vh;
+        width: 98%;
         margin-left: 5px;
         margin-top: 0.5%;
     }
@@ -2402,12 +2331,20 @@ footer .copyright {
         background-attachment: fixed;
         background-size: cover;
         min-height: 50vh;
-        width: 99%;
+        width: 98%;
         margin-left: 5px;
         margin-top: 0.5%;
     }
+    .backgroundCommentsAdmin .commentsAdmin {
+        margin-right: 5%;
+        margin-left: 5%;
+    }
     .commentsAdmin .commentButtonModeration button {
-        width: 100px;
+        width: 151px;
+        margin-bottom: 2%;
+    }
+    .backgroundCommentsAdmin .alert-warning {
+        min-height: 120px;
     }
     .backgroundNewArticle {
         background: url('../images/globeDigital.jpeg');
@@ -2415,42 +2352,40 @@ footer .copyright {
         background-attachment: scroll;
         background-size: cover;
         min-height: 50vh;
-        width: 99%;
+        width: 98%;
         margin-left: 5px;
         margin-top: 0.5%;
+    }
+    .newArticle {
+        margin-right: 5%;
+    }
+    .newArticle button {
+        width: 408px;
     }
     .successBackground {
-        background: url('../images/successBackground.jpeg');
-        background-repeat: no-repeat;
-        background-attachment: scroll;
-        background-size: 122%;
-        height: 45vh;
-        width: 99%;
+        background: #11101d;
+        color: burlywood;
         margin-top: 0.5%;
+        width: 98%;
         margin-left: 5px;
-        padding-top: 125px;
-        overflow: hidden;
+        height: 70vh;
     }
     .successBackground h1 {
-        margin-left: 40%;
-        margin-top: 1%;
+        margin-left: 0%;
+        margin-top: 0%;
     }
     .successBackground .alert-success {
-        margin-left: 42%;
-        margin-right: 2%;
+        margin-left: 5%;
+        margin-right: 5%;
         font-size: 30px;
     }
     .errorBackground {
-        background: url('../images/Danger-Wallpaper-Background.jpeg');
-        background-repeat: no-repeat;
-        background-attachment: scroll;
-        background-size: 100%;
-        height: 37vh;
-        width: 99%;
+        background: #11101d;
+        color: burlywood;
         margin-top: 0.5%;
+        width: 98%;
         margin-left: 5px;
-        padding-top: 125px;
-        overflow: hidden;
+        height: 70vh;
     }
     .errorBackground h1 {
         margin-top: 0%;
@@ -2481,7 +2416,7 @@ footer .copyright {
     .form_frost {
         width: 350px;
         height: 500px;
-        margin-left: 10%;
+        margin-left: 12%;
     }
     .form_frost input {
         width: 300px;
@@ -2489,16 +2424,41 @@ footer .copyright {
     .form_frost .btnNewRegister button {
         width: 100px;
     }
+    .form_frost .btnLogin button {
+        width: 100px;
+    }
     footer {
         background: rgb(0, 25, 46);
         color: burlywood;
         margin-top: 0.5%;
-        width: 99%;
+        width: 98%;
         margin-left: 5px;
     }
+    .nav_social {
+        margin-left: 10%;
+    }
     .form_contact {
-        margin-left: 5%;
-        width: 550px;
+        margin-left: 7%;
+        width: 350px;
         height: 350px;
+        margin-bottom: 35%;
+    }
+    .form_contact .form_FullName {
+        display: flex;
+        flex-direction: column;
+    }
+    .form_contact .form_FullName input {
+        width: 350px;
+    }
+    .links_footer {
+        margin-left: 20%;
+    }
+    footer .copyright {
+        color: burlywood;
+        margin-top: 15%;
+        margin-left: 10%;
+        margin-right: 10%;
+        font-size: 20px;
+        text-align: justify;
     }
 }
